@@ -1,0 +1,11 @@
+#context(1,"dlv_asp_context_acc", "./medExample/kb1.dlv").
+#context(2,"dlv_asp_context_acc", "./medExample/kb2.dlv").
+#context(3,"dlv_asp_context_acc", "./medExample/kb3.dlv").
+#context(4,"dlv_asp_context_acc", "./medExample/kb4.dlv").
+
+r1: (3:pneumonia) :- (2:xray_pneumonia).
+r2: (3:marker) :- (2:blood_marker).
+r3: (4:need_ab) :- (3:pneumonia).
+r4: (4:need_strong) :- (3:atyppneumonia).
+r5: (4:allow_strong_ab) :- not (1:allergy_strong_ab).
+r6: (4:foo) :- (4:foo).
